--- a/make/casting.html
+++ b/make/casting.html
@@ -354,7 +354,7 @@
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
-                                        <h3>Upload to Shapeways</h3>
+                                        <h3>Upload to Aakist</h3>
                                         <p class="text-muted">Instant pricing. Automated checks. Tools to improve printability.</p>
                                     </div>
                                 </div>
@@ -409,7 +409,7 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">ALHARITH - SHOPOWNER</h2>
-                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Shapeways, a whole new world opened in front of me.</p>
+                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Aakist, a whole new world opened in front of me.</p>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">JILL DAVIS</h2>
-                                    <p class="lead">Love shapeways, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
+                                    <p class="lead">Love Aakist, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
                                 </div>
                             </div>
                         </div>
@@ -432,8 +432,8 @@
                                 <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
-                                    <h2 class="section-heading">SHAPEWAYS COMMUNITY MEMBER</h2>
-                                    <p class="lead">Shapeways is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
+                                    <h2 class="section-heading">Aakist COMMUNITY MEMBER</h2>
+                                    <p class="lead">Aakist is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
                                 </div>
                             </div>
                         </div>
@@ -522,7 +522,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Great Jewelry on Shapeways</h2>
+                        <h2 class="section-heading">Great Jewelry on Aakist</h2>
                         <h3 class="section-subheading text-muted">Tag your uploads with Animation to show them off on this page.</h3>
                     </div>
                 </div>
