--- a/make/myshop.html
+++ b/make/myshop.html
@@ -310,7 +310,7 @@
             <div class="container">
                 <div class="intro-text1">
                     <div class="intro-heading">Bring Your Unique Products to Everyone</div>
-                    <div class="intro-lead-in">Share and Sell Your Designs on Shapeways</div>
+                    <div class="intro-lead-in">Share and Sell Your Designs on Aakist</div>
                     <a href="#services" class="page-scroll btn btn-xl">Open Your Shop</a>
                 </div>
             </div>
@@ -382,7 +382,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <div class="team-member">
                         <img src="../img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
-                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
+                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Aakist was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
                         <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
                             <p class="text-muted">Collected Edition</p>
                         </a>
@@ -396,7 +396,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <div class="team-member">
                         <img src="../img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
-                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
+                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Aakist was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
                         <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
                             <p class="text-muted">Collected Edition</p>
                         </a>
@@ -410,7 +410,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <div class="team-member">
                         <img src="../img/team/1.jpg" class="img-responsive img-circle" alt=""><br>
-                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Shapeways was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
+                        <p class="text-muted" style="color:black;">When I started experimenting with 3D design myself, Aakist was a natural fit. Because I design so much in metal, I love that all aspects of the process- from wax model to final polishing- can be handled in a single place.</p>
                         <a href="#"><h4><strong>KASIA WISNIEWSKI</strong></h4><br>
                             <p class="text-muted">Collected Edition</p>
                         </a>
