--- a/make/about/additive_manufacturing.html
+++ b/make/about/additive_manufacturing.html
@@ -361,14 +361,93 @@
 
     </div>
     <!-- /.content-section-b -->
-
-    <div class="container">
-
+    <section class="bg-light-gray">
+    <div class="col-lg-12">
+        <h2 class="text-center"><strong>Additive Manufacturing Processes</strong></h2>
+    </div>
+    <br><br><br><br>
+    <div class="container" style="background-color:#fff;">
         <div class="row">
             <div class="box">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Stereolithography (SLA)</h3>
+                    <p class="lead"><small>An additive manufacturing process which employs liquid ultraviolet curable photopolymer "resin" and an ultraviolet laser to build parts one layer at a time. For each layer, the laser beam traces a cross-section of the pattern on the surface of the liquid resin. Exposure to the UV laser light cures and solidifies the pattern traced on the resin and fuses it to the layer below. After the pattern has been traced, the platform drops slightly (the distance is generally equal to the thickness of a single layer) and a resin-filled blade sweeps across the cross section of the part, re-coating it with fresh material. On this new liquid surface, the subsequent layer pattern is traced, again fusing it to the previous layer.</small></p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/cHwEC7CqC8E" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Selective Laser Sintering (SLS)</h3>
+                    <p class="lead text-justify"><small>A technique that uses a laser sinter powdered material, aiming the laser automatically at points in space defined by a 3D model, binding the material together to create a solid structure. Using a high power laser to selectively fuse thin layers of powdered materials, the laser scans cross-sections generated from the file on the surface of a powder bed. After each section is scanned, the bed is lowered and a new layer of material is applied. The process repeats until the object is completed. SLS is a great use for rapid prototyping and for low-volume production of component parts.</small></p>
+                </div>
+                <div class="col-lg-6 col-lg-offset-1 col-sm-6">
+                    <iframe width="630" height="360" src="https://www.youtube.com/embed/aBNGnfoGGfQ" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Direct Metal Laser Sintering (DMLS)</h3>
+                    <p class="lead"><small>While the process is similar to SLS, 3D objects created through DMLS are in metal. Using the same laser sintering technology, metal powders are fused together to build objects. This process is also referred to as Direct Metal Laser Melting (DMLA) sometimes. The files are "sliced" into layers and downloaded into the machine to begin building. This process is great for detailed, geometric designs that would otherwise be very difficult to do with metals.</small></p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/bgQvqVq-SQU" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Fused Deposition Modeling (FDM)</h3>
+                    <p class="lead text-justify"><small>Objects created through FDM are produced by extruding small strings of melted material, which harden immediately, to form layers. The machines have a plastic filament or metal wire that is unwound from a coil to supply material to the extrusion nozzle, and can turn the flow of material on and off. The nozzle is heated in order to melt the material, and can move in both horizontal and vertical directions to build from the bottom up.</small></p>
+                </div>
+                <div class="col-lg-6 col-lg-offset-1 col-sm-6">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/WHO6G67GJbM" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Polyjet</h3>
+                    <p class="lead"><small>A process that spray photopolymer materials onto a tray in very thin layers until the 3D object is built. Each layer is cured with a UV light after being extruded allowing models to be handled and used immediately. A support material that is built to support complicated designs can be removed by hand and water jetting after the object is complete.</small></p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/IM8WU8JfyI8" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h3 class="section-heading">Binder Jetting</h3>
+                    <p class="lead text-justify"><small>This term explains a process in which layers of material are bonded by selectively depositing a liquid binding agent to join powdered material. This process of additive manufacturing is capable of printing a variety of materials, such as metals, sands and ceramics. While other additive techniques use a heat source to bind materials together, Binder Jetting does not employ any heat during the build process. This process provides the ability to print large parts and can be more cost effective than other methods.</small></p>
+                </div>
+                <div class="col-lg-6 col-lg-offset-1 col-sm-6">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/2vsaSzrhvcw" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
+
+    </section>
 
     <div class="content-section-a" style="background:url(http://static1.sw-cdn.net/files/cms/landing-pages/am-uses-and-benefits.jpg) center left / cover no-repeat;">
 
@@ -439,6 +518,20 @@
 
     </div>
     <!-- /.content-section-a -->
+
+    <div class="intro-header1">
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="clearfix"></div>
+        </div>
 
 
         <footer>
