--- a/make/about/additive_manufacturing.html
+++ b/make/about/additive_manufacturing.html
@@ -308,7 +308,7 @@
 
         <header class="header1">
             <div class="text-vertical-center">
-                <h2 style="color:#00004d;">Additive Manufacturing</h2>
+                <h2 style="color:#00001a;">Additive Manufacturing</h2>
                 <h3 class="text-muted">Learn about the techniques and benefits that bring products to life.</h3>
             </div>
         </header>
