--- a/make/crowd.html
+++ b/make/crowd.html
@@ -317,24 +317,26 @@
             </div>
         </header>
 
-        <section class="bg-primary1" id="about">
+        <div style="background-color:#36566F;">
             <div class="container">
                 <div class="row">
+                <br><br><br><br>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Finished Goods</h4>
+                        <h4 class="section-heading" style="color:white;">Finished Goods</h4>
                         <p class="text-faded">High quality, unique designs and limitless customization for your business</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Rapid Prototyping</h4>
+                        <h4 class="section-heading" style="color:white;">Rapid Prototyping</h4>
                         <p class="text-faded">Build a proof of concept for yourself and your backers quickly, then iterate</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Backer Rewards</h4>
+                        <h4 class="section-heading" style="color:white;">Backer Rewards</h4>
                         <p class="text-faded">Need a cool and unique reward or merchandise? Get it 3D printed!</p>
                     </div>
                 </div>
+                <br><br><br><br>
             </div>
-        </section>
+        </div>
 
         <section id="portfolio" class="portfolio bg-darkest-gray">
             <div class="container">
