--- a/make/about/easy_checking.html
+++ b/make/about/easy_checking.html
@@ -358,6 +358,108 @@
             </div>
         </section>
 
+        <div style="background: url(http://static1.sw-cdn.net/files/cms/landing-pages/landing-footer-sketches-bg.jpg) top center; background-size: cover;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <h2 style="color:white;">Get Started with 3D Tools</h2><br>
+                        <br>
+                    <div class="col-lg-6 text-center">
+                        <h3 class="section-heading" style="color:white;">Check your Models for Free</h3>
+                        <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">3D TOOLS TUTORIAL</a>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <h3 class="section-heading" style="color:white;">Print with Confidence</h3>
+                        <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">GO TO MY MODELS</a>
+                    </div>
+                    </div>
+                </div>
+                <br><br><br><br>
+            </div>
+        </div>
+
+            <section id="portfolio" class="bg-light-gray">
+                <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">More Design Resources</h2>
+                        <br><br>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/2.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/3.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/4.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Product Name</h4>
+                            <p class="text-muted">$123.456 by owner_name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="intro-header1">
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="col-lg-6 img">
+                <br><br><br><br>
+                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <br><br><br><br>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+
+
         <footer>
             <div class="container">
                 <div class="row">
