--- a/make/tutorials/creator.html
+++ b/make/tutorials/creator.html
@@ -306,32 +306,16 @@
         </div>
         <!--Register-->
 
-        <header class="header2">
+        <br><br>
+        <div style="background: url('https://static1.sw-cdn.net/files/cms/tutorials/assets/default-header-bg-dark-blue.jpg') top center; background-size: cover; background-position: 50% 5%; position: relative;">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <h1 style="color:#36566F;">Aakist 3D Tools</h1>
-                        <h3 class="text-muted"><strong>New Year. New Tools. Your Project.</strong></h3><h4 class="text-muted">Introducing new 3D tools to make designing easier than ever.</h4>
+                    <div class="col-lg-12 text-center">
+                    <div class="col-lg-7 text-center">
+                        <br><br><br>
+                        <h2 style="color:white;">3D Printing Design & Modeling Software</h2><br>
+                        <h3 style="color:white;">Tap into your inner designer, inspire the world.</h3>
                     </div>
-                </div>
-            </div>
-        </header>
-
-        <div style="background-color:#36566F;">
-            <div class="container">
-                <div class="row">
-                <br><br><br><br>
-                    <div class="col-lg-4 text-center">
-                        <h4 class="section-heading" style="color:white;">Check your Models for Free</h4>
-                        <p class="text-faded">Prepare, visualize and repair your models for 3D printing for free, with our automated, easy-to-use 3D tools.</p>
-                    </div>
-                    <div class="col-lg-4 text-center">
-                        <h4 class="section-heading" style="color:white;">Iterate Faster</h4>
-                        <p class="text-faded">Visualizations give you transparency into how we check your 3D models, and how you can improve them.</p>
-                    </div>
-                    <div class="col-lg-4 text-center">
-                        <h4 class="section-heading" style="color:white;">Print with Confidence</h4>
-                        <p class="text-faded">The 3D tools contain automatic checks, visualizations, and automatic fixes you can apply before you order.</p>
                     </div>
                 </div>
                 <br><br><br><br>
@@ -342,108 +326,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h2>What are Aakist 3D Tools?</h2><br>
-                        <div class="col-lg-5 col-sm-6">
                             <div class="clearfix"></div>
-                            <p class="lead text-justify"><small>Aakist 3D tools provides designers with more transparency and functionality as you prepare your 3D models for 3D printing. Aakist evolving suite of 3D tools give you the ability to check, visualize, and fix potential problems when you upload your 3D designs in preparation for 3D printing.</small></p>
+                            <p class="lead text-justify"><small>Below are some of the most popular software tools that our community of designers and makers use to create their products on Shapeways. You can find the whole range of programmatic, parametric, sculpting and modeling software. We feature both applications that are better suited for beginner 3D modelers, and those in use by professional or commercial designers.</small></p>
 
-                            <p class="lead text-justify"><small>Aakist 3D tools provides designers with more transparency and functionality as you prepare your 3D models for 3D printing. Aakist evolving suite of 3D tools give you the ability to check, visualize, and fix potential problems when you upload your 3D designs in preparation for 3D printing.</small></p>
-                        </div>
-                        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                            <br>
-                            <img class="img-responsive" src="http://static1.sw-cdn.net/files/cms/community/3dtools/squareforjen.png" alt="">
-                        </div>
+                            <p class="lead text-justify"><small>If you are mostly just looking to customize something, check out our Easy 3D Printing Creator Apps page.</small></p>
                     </div>   
                 </div>
             </div>
         </section>
 
-        <div style="background: url(http://static1.sw-cdn.net/files/cms/landing-pages/landing-footer-sketches-bg.jpg) top center; background-size: cover;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h2 style="color:white;">Get Started with 3D Tools</h2><br>
-                        <br>
-                    <div class="col-lg-6 text-center">
-                        <h3 class="section-heading" style="color:white;">Check your Models for Free</h3>
-                        <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">3D TOOLS TUTORIAL</a>
-                    </div>
-                    <div class="col-lg-6 text-center">
-                        <h3 class="section-heading" style="color:white;">Print with Confidence</h3>
-                        <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">GO TO MY MODELS</a>
-                    </div>
-                    </div>
-                </div>
-                <br><br><br><br>
-            </div>
-        </div>
-
-            <section id="portfolio" class="bg-light-gray">
-                <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">More Design Resources</h2>
-                        <br><br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/2.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/3.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/4.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                            <img src="../../img/about/1.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <div class="intro-header1">
             <div class="col-lg-6 img">
@@ -458,7 +349,6 @@
             </div>
             <div class="clearfix"></div>
         </div>
-
 
         <footer>
             <div class="container">
